--- a/index.html
+++ b/index.html
@@ -1,1 +1,267 @@
-Hello World
+ <!DOCTYPE html>
+ <meta charset="utf-8"/>
+<html>
+<head>
+<title>BAC Checking Account Calculator</title>
+<style>
+.table1 {
+    font-family: "Open Sans", Arial, sans-serif;
+    font-size: 1rem;
+	font-weight: 300;
+    border-collapse: collapse;
+    width: 35%;
+    margin: 0px auto;
+}
+
+.table2 {
+    font-family: "Open Sans", Arial, sans-serif;
+    font-size: 1rem;
+	font-weight: 300;
+    border-collapse: collapse;
+    width: 70%;
+    margin: 0px auto
+}
+
+td, th {
+    border: 8px solid #ffffff;
+    text-align: center;
+    padding: 1px;
+}
+
+th {
+	text-align: center;
+	word-wrap: break-word;
+}
+
+.col {
+	text-align: left;
+	width: 50%;
+}
+
+.col1 {
+	text-align: left;
+	background-color: #d9d9d9;
+	width: 22%;
+}
+
+.colOdd {
+	background-color: #e5dfec;
+}
+
+.colEven {
+	background-color: #ccc0d9;
+}
+
+.colForm {
+}
+
+.bold {
+	font-weight: bold;
+}
+
+/*tr:nth-child(even) {
+    background-color: #dddddd;
+}*/
+
+h2 {
+	font-family: "Open Sans", Arial, sans-serif;
+	text-align: center;
+	font-weight: normal;
+}
+
+.ui-input-text {
+	border: none !important;
+	border-color: transparent !important;
+	background-color: #dbe5f1;
+	padding: 5px;
+	width: 80%;
+}
+</style>
+</head>
+<body>
+
+<h2>Business Checking Account Calculator</h2>
+
+<form id="frm1" action="/action_page.php">
+	<table class = "table1">
+		<tr>
+			<td class="col">Number of Monthly Transactions:</td>
+			<td class="colForm">$ <input id="field1" type="text" class="ui-input-text" name="numMonthlyTrans" onkeyup="calculateValues()""><br></td>
+		</tr>
+		<tr>
+			<td class="col">Monthly Cash Deposit:</td>
+			<td class="colForm">$ <input id="field2" type="text" class="ui-input-text" name="monthlyCashDeposit" onkeyup="calculateValues()""><br></td>
+		</tr>
+		<tr>
+			<td class="col">Average Account Balance:</td>
+			<td class="colForm">$ <input id="field3" type="text" class="ui-input-text" name="avgAccountBalance" onkeyup="calculateValues()"></td>
+		</tr>
+	</table>
+</form>
+
+<br>
+
+<script>
+function calculateValues() {
+	var total = 0;
+	var temp = 0;
+	var interestRate = 0.0001;
+	var x = document.getElementById("frm1");
+
+	var i;
+	var j;
+	for (i=1, j=1; i<=5; i++) {
+		temp = calculateTransactionFee(x.elements[0].value, i);
+		total += temp
+		document.getElementById(i + "-" + j).innerHTML = "$" + parseFloat(temp).toFixed(2);
+		j++;
+
+		temp = calculateCashDepositedFee(x.elements[1].value);
+		total += temp;
+		document.getElementById(i + "-" + j).innerHTML = "$" + parseFloat(temp).toFixed(2);
+		j++;
+
+		temp = calculateMonthlyServiceCharge(x.elements[2].value, i);
+		total += temp;
+		document.getElementById(i + "-" + j).innerHTML = "$" + parseFloat(temp).toFixed(2);
+		j++;
+
+		document.getElementById(i+ "-" + j).innerHTML = "$" + parseFloat(total).toFixed(2);
+
+		if (i == 3 || i == 5) {
+			j+=2;
+			document.getElementById(i+ "-" + j).innerHTML = "$" + calculateMonthlyInterestIncome(x.elements[2].value, interestRate).toFixed(2);
+		}
+
+		j = 1;
+		total = 0;
+	}
+}
+
+function calculateTransactionFee(numMonthlyTrans, accountType) {
+	var transactions = [0, 100, 200, 200, 500, 500]
+	if (numMonthlyTrans < transactions[accountType]) {
+		return 0;
+	} else {
+		return (numMonthlyTrans - transactions[accountType]) * 0.25;
+	}
+}
+
+function calculateCashDepositedFee(monthlyCashDeposit) {
+	if (monthlyCashDeposit < 5000) {
+		return 0;
+	} else {
+		return ((monthlyCashDeposit - 5000) / 100) * 0.15;
+	}
+}
+
+function calculateMonthlyServiceCharge(avgAccountBalance, accountType) {
+	var charges = [0, 10, 25, 30, 35, 40];
+	var balances = [0, 2500, 25000, 30000, 35000, 40000]
+	if (avgAccountBalance > balances[accountType]) {
+		return 0;
+	} else {
+		return charges[accountType];
+	}
+}
+
+function calculateMonthlyInterestIncome(avgAccountBalance, interestRate) {
+	return (avgAccountBalance * interestRate) / 12;
+}
+</script>
+
+<div style="overflow-x:auto;">
+<table class = "table2">
+  <tr>
+  	<th></th>
+    <th class="colOdd">Commerce 100</th>
+    <th class="colEven">Commerce 200</th>
+    <th class="colOdd">Commerce 200<br>with Interest</th>
+    <th class="colEven">Commerce 500</th>
+    <th class="colOdd">Commerce 500<br>with Interest</th>
+  </tr>
+  <tr>
+  	<td></td>
+    <td class="colOdd"><a href="www.google.com">See Details</a></td>
+    <td class="colEven"><a href="www.google.com">See Details</a></td>
+    <td class="colOdd"><a href="www.google.com">See Details</a></td>
+    <td class="colEven"><a href="www.google.com">See Details</a></td>
+    <td class="colOdd"><a href="www.google.com">See Details</a></td>
+  </tr>
+  <tr>
+  	<td class="col1">Transaction Fees: </td>
+    <td id="1-1" class="colOdd">$0.00</td>
+    <td id="2-1" class="colEven">$0.00</td>
+    <td id="3-1" class="colOdd">$0.00</td>
+    <td id="4-1" class="colEven">$0.00</td>
+    <td id="5-1" class="colOdd">$0.00</td>
+  </tr>
+  <tr>
+  	<td class="col1">Cash Deposit Fees: </td>
+    <td id="1-2" class="colOdd">$0.00</td>
+    <td id="2-2" class="colEven">$0.00</td>
+    <td id="3-2" class="colOdd">$0.00</td>
+    <td id="4-2" class="colEven">$0.00</td>
+    <td id="5-2" class="colOdd">$0.00</td>
+  </tr>
+  <tr>
+  	<td class="col1">Monthly Service Charge: </td>
+    <td id="1-3" class="colOdd">$0.00</td>
+    <td id="2-3" class="colEven">$0.00</td>
+    <td id="3-3" class="colOdd">$0.00</td>
+    <td id="4-3" class="colEven">$0.00</td>
+    <td id="5-3" class="colOdd">$0.00</td>
+  </tr>
+  <tr>
+  	<td class="col1 bold">Total Cost: </td>
+    <td id="1-4" class="bold colOdd">$0.00</td>
+    <td id="2-4" class="bold colEven">$0.00</td>
+    <td id="3-4" class="bold colOdd">$0.00</td>
+    <td id="4-4" class="bold colEven">$0.00</td>
+    <td id="5-4" class="bold colOdd">$0.00</td>
+  </tr>
+  <tr>
+  	<td></td>
+  	<td></td>
+  	<td></td>
+  	<td></td>
+  	<td></td>
+  	<td></td>
+  </tr>
+    <tr>
+  	<td></td>
+  	<td></td>
+  	<td></td>
+  	<td></td>
+  	<td></td>
+  	<td></td>
+  </tr>
+  <tr>
+  	<td class="col1">Interest Rate: </td>
+    <td class="colOdd">None</td>
+    <td class="colEven">None</td>
+    <td id="3-5" class="colOdd">0.01%</td>
+    <td class="colEven">None</td>
+    <td id="5-5" class="colOdd">0.01%</td>
+  </tr>
+  <tr>
+  	<td class="col1 bold">Monthly Interest Income: </td>
+    <td class="bold colOdd">None</td>
+    <td class="bold colEven">None</td>
+    <td id="3-6" class="bold colOdd">$0.00</td>
+    <td class="bold colEven">None</td>
+    <td id="5-6" class="bold colOdd">$0.00</td>
+  </tr>
+  <tr>
+  	<td></td>
+    <td class="colOdd"><a href="www.google.com">See Details</a></td>
+    <td class="colEven"><a href="www.google.com">See Details</a></td>
+    <td class="colOdd"><a href="www.google.com">See Details</a></td>
+    <td class="colEven"><a href="www.google.com">See Details</a></td>
+    <td class="colOdd"><a href="www.google.com">See Details</a></td>
+  </tr>
+</table>
+</div>
+
+</body>
+</html> 
