removed calculator stuff

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </div>
         </div>
 
-        <style>
+        <!-- <style>
 .table1 {
     font-family: "Open Sans", Arial, sans-serif;
     font-size: 1rem;
@@ -385,7 +385,7 @@ function calculateMonthlyInterestIncome(avgAccountBalance, interestRate) {
     <td class="colOdd"><a href="www.google.com">See Details</a></td>
   </tr>
 </table>
-</div>
+</div> -->
 
 
       </div>
